Assets y copy para diseño final

--- a/adma/public/css/style.css
+++ b/adma/public/css/style.css
@@ -1,5 +1,5 @@
 .paralax#home {
-  background-image: url("https://cdn.pixabay.com/photo/2015/09/29/22/49/blueprint-964630_960_720.jpg");
+  background-image: url("../img/IMG_6324.JPG");
 }
 
 .paralax {
