--- a/adma/public/css/style.css
+++ b/adma/public/css/style.css
@@ -71,3 +71,11 @@
   text-decoration: none;
   color: #ffffff;
 }
+.color {
+  color: #000000 !important;
+  text-shadow: 1px 2px 5px #565454;
+}
+.big{
+  width: 4rem !important;
+  height: 4rem !important;
+}
